--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+[x-cloak="all"] {
+  display: none !important;
+}
+
+@media (min-width: 1024px) {
+  [x-cloak="desktop"] {
+    display: block !important;
+  }
+}
+
+@media (max-width: 1024px) {
+  [x-cloak="mobile"] {
+    display: none !important;
+  }
+}
